    $rule->require('k1')
      ->check('string')->message('k1 should be string')
      ->check('not_blank)->message('k1 should be not blank')
  - add message fallback system.
    If message is not set to some constraint, the message is automatically set
    by using after message.
    $rule->require('k1')
      ->check('string')->check('not_blank')->message('k1 should be string having length')
  - add check_or method to Validator::Custom::Result
    $rule->check_or('blank', 'int');
    This is improvemet of "or" validation, for exmpale 'blank || int'
  - Validator::Custom::Result error_reason is DEPRECATED! This method don't work correct from now.
0.24
  - when default option is specified, result data become valid
    (This is backword imcompatible, but old behavior is a little
     wrong and new behavior is better)
0.23
  - remove syntax attribute
  - use constraints function from $_ in constraint function;
    ----------------------------------------------------
    my $rule = [
      title => [
        sub { $_->blank($_[0]) || $_->regex($_[0], qr/[0-9]+/) }
      ]
    ];
    ----------------------------------------------------

  - add create_rule method and new rule syntax
    ----------------------------------------------------
    my $rule = $vc->create_rule;
    $rule->require('id')->check(
      'int'
    )->message('id should be integer');
    $rule->require('name')->check(
      ['not_blank' => 'name is emtpy'],
      [{length => [1, 5]} => 'name is too long']
    );
    $rule->optional('age')->check(
      'int'
    )->default(20);
    ----------------------------------------------------
0.22
  - remove Validator::Custom::Rules(EXPERIMANTAL) because this rule set can't manipulate
    multiple rules well
0.21
  - normalized_rule attribute(EXPERIMENTAL) is changed to rule_obj(EXPERIMENTAL)
    rule become saved as object.
  - validate method can receive Validator::Custom::Rule object(EXPERIMENTAL)