@@ -14,6 +14,22 @@ my $js;
 
 use Validator::Custom;
 
+# array validation new syntax
+{
+  my $vc = Validator::Custom->new;
+  my $rule = $vc->create_rule;
+  my $data = { k1 => 1, k2 => [1,2], k3 => [1,'a', 'b'], k4 => 'a', k5 => []};
+  $rule->require('k1')->array(1)->check({selected_at_least => 1})->check('int')->message('k1Error1');
+  $rule->require('k2')->array(1)->check({selected_at_least => 1})->check('int')->message('k2Error1');
+  $rule->require('k3')->array(1)->check({selected_at_least => 1})->check('int')->message('k3Error1');
+  $rule->require('k4')->array(1)->check({selected_at_least => 1})->check('int')->message('k4Error1');
+  $rule->require('k5')->array(1)->check({selected_at_least => 1})->check('int')->message('k5Error1');
+  
+  my $messages = $vc->validate($data, $rule)->messages;
+
+  is_deeply($messages, [qw/k3Error1 k4Error1 k5Error1/], 'array validate');
+}
+
 # check_or
 {
   my $vc = Validator::Custom->new;
